--- a/contents/index.html
+++ b/contents/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="default.css" type="text/css" />
 	<script src="jquery-2.0.3.min.js"></script>
 	<script src="AtomApp.js"></script>
+	<script src="main.js"></script>
   </head>
   <body>
     <h1>Hello World!</h1>
