--- a/contents/index.html
+++ b/contents/index.html
@@ -12,5 +12,33 @@
     <h1>Hello World!</h1>
     We are using node.js <script>document.write(process.version)</script>
     and atom-shell <script>document.write(process.versions['atom-shell'])</script>.
+		
+		<div class="indicator"></div>
+		
+		<!--
+			<webview id="foo" src="https://www.github.com/" style="width:640px; height:480px">
+			</webview>
+			
+			<script>
+				onload = function() {
+					var webview = document.getElementById("foo");
+					var indicator = document.querySelector(".indicator");
+					
+					// document.querySelector("div + input").value = "aa";
+					
+					var loadstart = function() {
+						indicator.innerText = "loading...";
+					}
+					var loadstop = function() {
+						indicator.innerText = "";
+					}
+					webview.addEventListener("did-start-loading", loadstart);
+					webview.addEventListener("did-stop-loading", loadstop);
+					console.log(webview);
+				}
+			</script>
+		-->
+
+
   </body>
 </html>
