--- a/contents/index.html
+++ b/contents/index.html
@@ -14,7 +14,7 @@
     and atom-shell <script>document.write(process.versions['atom-shell'])</script>.
 		
 		
-		<webview id="foo" src="https://google.com" style="width:100%; height:640px; display: block; overflow: hidden;" nodeintegration>
+		<webview id="foo" preload="./webview.js" src="https://google.com" style="width:100%; height:640px; display: block; overflow: hidden;" nodeintegration>
 			<script>
 				onload = function() {
 					var webview = document.getElementById("foo");
