--- a/contents/index.html
+++ b/contents/index.html
@@ -2,10 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>I am a Title.</title>
+    <title>Hello World!</title>
 	<link rel="stylesheet" href="default.css" type="text/css" />
-	<script src="nodejs/NodeJsApp.js"></script>
-	<script src="lib/jquery-2.0.3.min.js"></script>
+	<script src="jquery-2.0.3.min.js"></script>
 	<script src="AtomApp.js"></script>
 	<script src="main.js"></script>
   </head>
@@ -15,8 +14,22 @@
     and atom-shell <script>document.write(process.versions['atom-shell'])</script>.
 		
 		
-		<webview id="foo" preload="./webview.js" src="https://google.com"
-			style="width:100%; height:640px; display: block; overflow: hidden;" nodeintegration>
+		<webview id="foo" preload="./webview.js" src="https://google.com" style="width:100%; height:640px; display: block; overflow: hidden;" nodeintegration>
+			<script>
+				onload = function() {
+					var webview = document.getElementById("foo");
+					var indicator = document.querySelector(".indicator");
+					var loadstart = function() {
+						indicator.innerText = "loading...";
+					}
+					var loadstop = function() {
+						indicator.innerText = "";
+						webview.chi
+					}
+					webview.addEventListener("did-start-loading", loadstart);
+					webview.addEventListener("did-stop-loading", loadstop);
+				}
+			</script>
 		</webview>
 		<div class="indicator"></div>
 
