add http server
fetch reload function

--- a/contents/index.html
+++ b/contents/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>I am a Title.</title>
 	<link rel="stylesheet" href="default.css" type="text/css" />
-	<script src="nodejs/NodeJsApp.js"></script>
-	<script src="lib/jquery-2.0.3.min.js"></script>
+	<script src="web/mylib/CommonJs.js"></script>
+	<script src="NodeJsApp.js"></script>
+	<!-- <script src="nodejs/NodeJsApp.js"></script> -->
+	<script src="web/lib/jquery-2.0.3.min.js"></script>
 	<script src="AtomApp.js"></script>
 	<script src="main.js"></script>
   </head>
@@ -14,12 +16,9 @@
     We are using node.js <script>document.write(process.version)</script>
     and atom-shell <script>document.write(process.versions['atom-shell'])</script>.
 		
-		
 		<webview id="foo" preload="./webview.js" src="https://google.com"
 			style="width:100%; height:640px; display: block; overflow: hidden;" nodeintegration>
 		</webview>
-		<div class="indicator"></div>
-
-
+		
   </body>
 </html>
