--- a/contents/web/index.html
+++ b/contents/web/index.html
@@ -7,13 +7,13 @@
 	<script src="lib/jquery-2.0.3.min.js"></script>
 	<script src="lib/socket.io.js"></script>
 	<script src="mylib/CommonJs.js"></script>
-	<script src="mylib/AtomAppClient.js"></script>
+	<script src="mylib/NodeClient.js"></script>
 	<script src="main.js"></script>
   </head>
   <body>
     <h1>Hello World!</h1>
     <p>
-      test
+      test 3
     </p>
   </body>
 </html>
