--- a/README.html
+++ b/README.html
@@ -11,3 +11,11 @@
 </code></pre><h2 id="-">開発環境</h2>
 <p>npm install
 coffeescript compiler</p>
+<hr>
+<h4 id="node-js-application">node.js application</h4>
+<p>以下をコピー</p>
+<pre><code>package.json
+contents/
+    node.js/
+    web/
+</code></pre>
