add package coffee-script

--- a/README.html
+++ b/README.html
@@ -6,16 +6,17 @@
     run.bat(execute)
 </code></pre><p>#</p>
 <p>contents内のjs,html,css編集後、自動更新</p>
-<h1 id="-execute-">起動(execute)</h1>
+<h1 id="-execution-">起動(execution)</h1>
 <pre><code>run.batファイルを起動。
 </code></pre><h2 id="-">開発環境</h2>
 <p>npm install
 coffeescript compiler</p>
 <hr>
 <h4 id="node-js-application">node.js application</h4>
-<p>以下をコピー</p>
+<p>以下をプロジェクトにコピー</p>
 <pre><code>package.json
 contents/
     node.js/
     web/
+    main.coffee
 </code></pre>
