fixed nodejs app

--- a/README.html
+++ b/README.html
@@ -6,8 +6,10 @@
     run.bat(execute)
 </code></pre><p>#</p>
 <p>contents内のjs,html,css編集後、自動更新</p>
-<h1 id="-execution-">起動(execution)</h1>
-<pre><code>run.batファイルを起動。
+<h1 id="-execution-">初期起動(execution)</h1>
+<pre><code>bat_npm.bat
+compiler.bat
+run.bat
 </code></pre><h2 id="-">開発環境</h2>
 <p>npm install
 coffeescript compiler</p>
@@ -15,8 +17,8 @@ coffeescript compiler</p>
 <h4 id="node-js-application">node.js application</h4>
 <p>以下をプロジェクトにコピー</p>
 <pre><code>package.json
+nodeapp
 contents/
     node.js/
     web/
-    main.coffee
 </code></pre>
