--- a/README.html
+++ b/README.html
@@ -1,18 +1,17 @@
-<h1 id="-environment-">必要環境(environment)</h1>
+<h2 id="-environment-">必要環境(environment)</h2>
 <p>Windows</p>
-<h1 id="-formation-">構成(formation)</h1>
+<h2 id="-formation-">構成(formation)</h2>
 <pre><code>/atom-shell-version/
 /this_sample/
     run.bat(execute)
 </code></pre><p>#</p>
 <p>contents内のjs,html,css編集後、自動更新</p>
-<h1 id="-execution-">初期起動(execution)</h1>
+<h2 id="-execution-">初期起動(execution)</h2>
 <pre><code>bat_npm.bat
 compiler.bat
 run.bat
 </code></pre><h2 id="-">開発環境</h2>
-<p>npm install
-coffeescript compiler</p>
+<p>??</p>
 <hr>
 <h4 id="node-js-application">node.js application</h4>
 <p>以下をプロジェクトにコピー</p>
@@ -21,4 +20,4 @@ nodeapp
 contents/
     node.js/
     web/
-</code></pre><p>そのままコピーし、nodeapp起動でも動きます。</p>
+</code></pre><p>そのままcloneし、<code>node nodeapp</code>起動でも動きます。</p>
