--- a/README.html
+++ b/README.html
@@ -1,18 +1,19 @@
-<h2 id="-environment-">必要環境(environment)</h2>
-<p>Windows</p>
-<h2 id="-formation-">構成(formation)</h2>
+<h2 id="-development-environment-">(development environment)</h2>
+<p>Windows
+npm
+atom-shell
+coffee-script compiler</p>
+<h2 id="-formation-">(formation)</h2>
 <pre><code>/atom-shell-version/
 /this_sample/
     run.bat(execute)
 </code></pre><p>#</p>
 <p>contents内のjs,html,css編集後、自動更新</p>
-<h2 id="-execution-">初期起動(execution)</h2>
+<h2 id="-first-execution-">(first execution)</h2>
 <pre><code>bat_npm.bat
 compiler.bat
 run.bat
-</code></pre><h2 id="-">開発環境</h2>
-<p>??</p>
-<hr>
+</code></pre><hr>
 <h4 id="node-js-application">node.js application</h4>
 <p>以下をプロジェクトにコピー</p>
 <pre><code>package.json
