--- a/README.html
+++ b/README.html
@@ -21,4 +21,4 @@ nodeapp
 contents/
     node.js/
     web/
-</code></pre><p>そのままcloneし、<code>node nodeapp</code>起動でも動きます。</p>
+</code></pre><p>そのままcloneし、<code>node server</code>起動でも動きます。</p>
