--- a/README.html
+++ b/README.html
@@ -1,24 +1,19 @@
-<h2 id="-development-environment-">(development environment)</h2>
+<h3 id="-">(動作確認)</h3>
+<p>windows7</p>
+<h3 id="-">(開発環境)</h3>
 <p>Windows
 npm
-atom-shell
+electron
 coffee-script compiler</p>
-<h2 id="-formation-">(formation)</h2>
-<pre><code>/atom-shell-version/
+<h3 id="-">(配置)</h3>
+<pre><code>/electron-version/
 /this_sample/
     run.bat(execute)
 </code></pre><p>#</p>
-<p>contents内のjs,html,css編集後、自動更新</p>
-<h2 id="-first-execution-">(first execution)</h2>
+<h3 id="-">(初回実行)</h3>
 <pre><code>bat_npm.bat
 compiler.bat
 run.bat
 </code></pre><hr>
 <h4 id="node-js-application">node.js application</h4>
-<p>以下をプロジェクトにコピー</p>
-<pre><code>package.json
-nodeapp
-contents/
-    node.js/
-    web/
-</code></pre><p>そのままcloneし、<code>node server</code>起動でも動きます。</p>
+<p>そのままcloneし、<code>node server</code>で起動。</p>
