--- a/contents/index.html
+++ b/contents/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Hello World!</h1>
     We are using node.js <script>document.write(process.version)</script>
-    and atom-shell <script>document.write(process.versions['atom-shell'])</script>.
+    and electron <script>document.write(process.versions['atom-shell'])</script>.
     create http server, open port <script>document.write(require("./web/mylib/CommonJs.js").prototype.http_port)</script>.
   </body>
 </html>
