--- a/README.html
+++ b/README.html
@@ -1,11 +1,18 @@
 <h3 id="-">(動作確認)</h3>
 <p>windows7</p>
 <h3 id="-">(開発環境)</h3>
-<p>Windows
-npm
-electron
-coffee-script compiler</p>
-<h3 id="-">(配置)</h3>
+<p>coffeescript, sass</p>
+<pre><code>Windows7
+    electron(https://github.com/atom/electron)
+    npm
+    ruby
+    rubygems
+        gem install sass
+    ### my choco ###
+    choco install githubforwindows cmder atom notepadplusplus ruby rubygems
+    choco install googlechrome clover dexpot autoit.commandline
+    choco install firefox-dev -pre
+</code></pre><h3 id="-">(配置)</h3>
 <pre><code>/electron-version/
 /this_sample/
     run.bat(execute)
