--- a/contents/proj/web/index.html
+++ b/contents/proj/web/index.html
@@ -8,10 +8,10 @@
     <script src="/lib/socket.io.js"></script>
     <script src="/mylib/CommonJs.js"></script>
     <script src="/mylib/NodeClient.js"></script>
-    <script src="/proj/ClientApp.js"></script>
+    <script src="/web/ClientApp.js"></script>
   </head>
   <body>
-    sample app
+    sample project app 2
     <script charset="utf-8">
       ca = new ClientApp()
     </script>
