AutoEvent設置,他External Site等変更

--- a/contents/index.html
+++ b/contents/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="default.css" type="text/css" />
 	<!-- <script src="nodejs/NodeJsApp.js"></script> -->
 	<script src="web/lib/jquery-2.0.3.min.js"></script>
+	<script src="web/mylib/am/AutoEvent.js"></script>
 	<script src="main.js"></script>
   </head>
   <body>
