--- a/contents/proj/web/index.html
+++ b/contents/proj/web/index.html
@@ -8,6 +8,7 @@
     <script src="/lib/socket.io.js"></script>
     <script src="/mylib/CommonJs.js"></script>
     <script src="/mylib/NodeClient.js"></script>
+    <script src="/mylib/am/AutoEvent.js"></script>
     <script src="/web/ClientApp.js"></script>
   </head>
   <body>
