--- a/contents/index.html
+++ b/contents/index.html
@@ -13,6 +13,6 @@
     <h1>Hello World!</h1>
     We are using node.js <script>document.write(process.version)</script>
     and electron <script>document.write(process.versions['atom-shell'])</script>.
-    create http server, open port <script>document.write(require("./web/mylib/CommonJs.js").prototype.http_port)</script>.
+    create http server, open port <script>document.write(require("./proj/web/CommonJs.js").prototype.http_port)</script>.
   </body>
 </html>
