--- a/contents/sample_proj/web/index.html
+++ b/contents/sample_proj/web/index.html
@@ -7,6 +7,7 @@
     <script src="/lib/jquery-2.0.3.min.js"></script>
     <script src="/lib/socket.io.js"></script>
     <script src="/mylib/CommonJs.js"></script>
+    <script src="/web/CommonJs.js"></script>
     <script src="/mylib/NodeClient.js"></script>
     <script src="/mylib/am/AutoEvent.js"></script>
     <script src="/web/ClientApp.js"></script>
