cloud9でのクライアント側マルチユーザー開発対応

--- a/contents/index.html
+++ b/contents/index.html
@@ -7,11 +7,12 @@
 	<!-- <script src="nodejs/NodeJsApp.js"></script> -->
 	<script src="web/lib/jquery-2.0.3.min.js"></script>
 	<script src="web/mylib/am/AutoEvent.js"></script>
+	<script src="app.js"></script>
 	<script src="main.js"></script>
   </head>
   <body>
     <h1>Hello World!</h1>
-    We are using node.js <script>document.write(process.version)</script>
+    We are using iojs <script>document.write(process.version)</script>
     and electron <script>document.write(process.versions['atom-shell'])</script>.
     create http server, open port <script>document.write(require("./proj/web/CommonJs.js").prototype.http_port)</script>.
   </body>
