--- a/contents/index.html
+++ b/contents/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <title>I am a Title.</title>
 	<link rel="stylesheet" href="default.css" type="text/css" />
-	<!-- <script src="nodejs/NodeJsApp.js"></script> -->
-	<script src="web/lib/jquery-2.0.3.min.js"></script>
-	<script src="web/mylib/am/AutoEvent.js"></script>
+	<script src="proj/web/lib/jquery-2.0.3.min.js"></script>
 	<script src="app.js"></script>
 	<script src="main.js"></script>
   </head>
@@ -14,6 +12,6 @@
     <h1>Hello World!</h1>
     We are using iojs <script>document.write(process.version)</script>
     and electron <script>document.write(process.versions['atom-shell'])</script>.
-    create http server, open port <script>document.write(require("./proj/web/CommonJs.js").prototype.http_port)</script>.
+    create http server, open port <script>document.write(require("./proj/web/mylib/CommonJs.js").prototype.http_port)</script>.
   </body>
 </html>
