--- a/contents/proj/web/index.html
+++ b/contents/proj/web/index.html
@@ -7,13 +7,12 @@
     <script src="/lib/jquery-2.0.3.min.js"></script>
     <script src="/lib/socket.io.js"></script>
     <script src="/mylib/CommonJs.js"></script>
-    <script src="/web/CommonJs.js"></script>
     <script src="/mylib/NodeClient.js"></script>
     <script src="/mylib/am/AutoEvent.js"></script>
-    <script src="/web/ClientApp.js"></script>
+    <script src="/ClientApp.js"></script>
   </head>
   <body>
-    sample project app 2
+    sample project app 4
     <script charset="utf-8">
       ca = new ClientApp()
     </script>
