--- a/contents/index.html
+++ b/contents/index.html
@@ -7,6 +7,7 @@
 	<script src="proj/web/lib/jquery-2.0.3.min.js"></script>
 	<script src="app.js"></script>
 	<script src="main.js"></script>
+	<script src="nodejs/Compiler.js"></script>
   </head>
   <body>
     <h1>Hello World!</h1>
