Compilerの独立化方法、安定化最優先

--- a/contents/index.html
+++ b/contents/index.html
@@ -8,6 +8,7 @@
 	<script src="app.js"></script>
 	<script src="main.js"></script>
 	<!-- <script src="nodejs/Compiler.js"></script> -->
+	<script src="nodejs/CompilerSrc.js"></script>
   </head>
   <body>
     <h1>Hello World!</h1>
