add compiler base class

--- a/contents/index.html
+++ b/contents/index.html
@@ -8,7 +8,8 @@
 	<script src="app.js"></script>
 	<script src="main.js"></script>
 	<!-- <script src="nodejs/Compiler.js"></script> -->
-	<script src="nodejs/CompilerSrc.js"></script>
+	<!-- <script src="nodejs/CompilerSrc.js"></script> -->
+	<!-- <script src="nodejs/CompileAll.js"></script> -->
   </head>
   <body>
     <h1>Hello World!</h1>
