add autoevent, 単独で動くコンパイラ

--- a/contents/index.html
+++ b/contents/index.html
@@ -9,7 +9,9 @@
 	<script src="main.js"></script>
 	<!-- <script src="nodejs/Compiler.js"></script> -->
 	<!-- <script src="nodejs/CompilerSrc.js"></script> -->
-	<!-- <script src="nodejs/CompileAll.js"></script> -->
+  <script type="text/javascript">
+    // require("./nodejs/CompileAll")
+  </script>
   </head>
   <body>
     <h1>Hello World!</h1>
