--- a/contents/proj/web/mylib/am/AutoEvent/index.html
+++ b/contents/proj/web/mylib/am/AutoEvent/index.html
@@ -1,7 +1,10 @@
 <html>
   <head>
     <title></title>
+    <!-- this module -->
+    <script src="browser-polyfill.min.js" charset="utf-8"></script>
     <script src="index.js" charset="utf-8"></script>
+    <!-- base module -->
     <script src="http://code.jquery.com/jquery-2.1.4.min.js" charset="utf-8"></script>
     <script src="/lib/socket.io.js"></script>
     <script src="/mylib/CommonJs.js"></script>
@@ -13,18 +16,23 @@
       1000
     </div>
     <div class="text">
-      1
+      0
     </div>
     <input type="text" id="text" name="name" value="">
   </body>
   <script type="text/javascript">
-    ca = new ClientApp()
+    var ca = new ClientApp()
     $(".text").click(function(e){
-      $target = $(this)
-      var num = parseInt($target.text())
-      $target.text(++num)
-      console.log(ae.test_code());
+      var func = function(){
+        $target = $(e.target)
+        var num = parseInt($target.text())
+        $target.text(++num)
+        if (num > 1100) {
+          clearInterval(interval)
+          $("body").append("<div class='super-test'>abc</div>")
+        }
+      }
+      var interval = setInterval(func,100)
     })
-    var ae = new AutoEvent()
   </script>
 </html>
